test/Fail/Crash.err
Crash.agda:21.9-13: error: [UnequalTypes]
The type
  N
is not a subtype of
  B
when checking that the expression zero has type F false
